--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   --bg: blue;
   --bg2: rgb(239, 239, 239);
   --border: 1px solid rgb(214, 214, 214);
+  --shadow: 1px 1px 5px lightgray;
 }
 
 .dark{
@@ -81,7 +82,7 @@ nav .setting{
   border-radius: 7px;
 }
 
-.sign-container .input-group input, select, textarea {
+.sign-container .input-group input, select, textarea, .catogaries input  {
   width: 100%;
   outline: 0;
   border: var(--border);
@@ -89,7 +90,7 @@ nav .setting{
   border-radius: 10px;
   background-color: var(--bg2);
 }
-.sign-container  button{
+.sign-container  button, .catogaries button{
   padding: 10px 15px;
   border-radius: 10px;
   width: 100%;
@@ -116,4 +117,106 @@ nav .setting{
 .catogary::-webkit-scrollbar{
   display: none;
   
+}
+
+/** loading **/
+.loading{
+  display: flex;
+}
+ .full, .half{
+  height: 30px;
+  background-color: lightgrey;
+  margin-top: 10px;
+  border-radius: 5px;
+  animation: skeletan 3s linear infinite;
+
+}
+.loading .half{
+  width: 50%;
+  background-color: lightgrey;
+
+}
+.loading .img{
+  height: 120px;
+  background-color: lightgrey;
+  border-radius: 5px;
+  animation: skeletan 3s linear infinite;
+}
+@keyframes skeletan {
+  0%{
+    background-color: lightgrey;
+  }
+  50%{
+    background-color: rgb(220, 219, 219);
+  }
+  100%{
+    background-color: rgb(228, 228, 228);
+  }
+}
+
+/** dashboard **/
+.box{
+  border-left: 2.5px solid #0000ff;
+  box-shadow: var(--shadow);
+}
+aside ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+aside ul li{
+  padding: 10px;
+  font-size: 17px;
+}
+aside ul a{
+  text-decoration: none;
+  color: black;
+}
+aside ul .active li{
+  background-color: blue;
+  color: white;
+  border-radius: 5px;
+}
+
+/** users **/
+table{
+  width: 100%;
+}
+ tr{
+  box-shadow: var(--shadow);
+  border-radius: 5px;
+  margin-bottom: 20px !important;
+}
+tr td, th{
+  padding: 5px;
+  margin-bottom: 20px !important;
+  margin-top: 20px !important;
+}
+
+/** model **/
+.model{
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  overflow-y: auto;
+}
+
+/** side bar **/
+@media (max-width:992px){
+
+  .side-bar{
+    position: absolute;
+    right: -100%;
+  }
+}
+.active-sidebar{
+  right: 0;
+  width: 50%;
+  background-color: white;
+  transition: 0.3s;
+  height: 100vh;
 }
